# stl2scad

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: create_release.yaml  on_pull_request.yaml  on_push.yaml
pip_deps/: dev_requirements-linux-py3.10.12.txt  dev_requirements-linux-py3.12.3.txt  dev_requirements-win32-py3.11.9.txt  requirements-linux-py3.10.12.txt  requirements-linux-py3.12.3.txt  requirements-win32-py3.11.9.txt
src/: stl2scad
src/stl_2_scad/: __init__.py  cli.py  cli_command_dims.py  cli_command_embed.py  cli_command_import.py  settings.py  stl_helpers.py
test/data/: example_cube.stl  example_sphere.stl  generated_embed.scad  generated_import.scad  generator.scad
test/functional_tests/: conftest.py  test_01_usage.py  test_02_dims.py  test_03_import.py
test/functional_tests/helpers/: __init__.py  stl2scad_ifc.py
