[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = 'setuptools.build_meta'


[project]
name = "stl2scad"
version = "1.0.1"
authors = [{name = "Clemens Rabe", email = "clemens.rabe@clemensrabe.de"}]
description = "Tool for using STL files with OpenSCAD."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "coloredlogs",
    "numpy-stl",
]

[project.optional-dependencies]
dev = [
    "ipython",

    "black",

    "flake8",
    "flake8-black",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-isort",
    "flake8-pyproject",
    "pep8-naming",

    "isort",

    "mypy",
    "types-mock",

    "pycodestyle",

    "pylint",

    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-pyproject",

    "pyinstaller",
]
test = [
    "coverage[toml]",
    "mock",
    "pytest",
    "pytest-cov",
    "pytest-timeout"
]


[project.urls]
Homepage = "https://github.com/seeraven/stl2scad"
Issues = "https://github.com/seeraven/stl2scad/issues"


[tool.black]
line-length = 120


[tool.isort]
profile = "black"
line_length = 120
src_paths = ["src", "test"]


[tool.flake8]
max-line-length = 120
extend-ignore = ['E203']

[tool.pylint.main]
py-version = "3.10"
disable = ["unknown-option-value"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.similarities]
min-similarity-lines = 20


[tool.mypy]
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "coloredlogs.*",
    "pytimeparse.*",
]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["src"]


[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
source = [
    "src/git_cache",
    "test",
]
data_file = ".coverage"
branch = true
parallel = true
relative_files = true
disable_warnings = ["no-data-collected"]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 20

[tool.coverage.html]
directory = "doc/unittests-coverage"

[tool.coverage.xml]
output = "doc/unittests-coverage/coverage.xml"


[tool.sphinx-pyproject]
copyright = "2026, Clemens Rabe <clemens.rabe@clemensrabe.de>"
release_url = "https://github.com/seeraven/stl2scad/releases"
